Added router, sorting, caluculation of consumption and stuff

--- a/src/App.css
+++ b/src/App.css
@@ -14,22 +14,19 @@
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+  padding: 0 0 20px;
 }
 
 .App-title {
   font-size: 1.5em;
 }
 
-.App-intro {
+.container {
   text-align: left;
   font-size: large;
   max-width: 570px;
   margin: 0 auto;
-  padding: 48px 12px;
+  padding: 12px;
 }
 
 @keyframes App-logo-spin {
@@ -72,4 +69,35 @@ ol {
 
 li {
   text-align: left;
+}
+
+nav {
+  margin: 0 0 36px;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  display: inline-block;
+}
+
+nav a {
+  border: 2px solid #333;
+  border-radius: 3px;
+  margin: 0 12px 0 0;
+  padding: 6px 12px;
+  display: block;
+  color: #333;
+  font-weight: 500;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+nav a.active {
+  background: #333;
+  color: #fff;
 }
