--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,9 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.logo {
+  display: block;
+  max-width: 366px;
 }
 
 .App-header {
