--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+body {
+  background: papayawhip;
+  color: palevioletred;
+}
+
 .App {
   text-align: center;
 }
@@ -48,18 +53,20 @@ input {
   width: 100%;
   font-size: 100%;
   font-family: inherit;
-  padding: 3px;
+  padding: 6px 12px;
+  border: 1px solid palevioletred;
 }
 
 button {
+  background: palevioletred;
   display: inline-block;
-  background: transparent;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 0;
   outline: 0;
   padding: 6px 12px;
   border-radius: 3px;
   font-size: 100%;
   font-family: inherit;
+  color: papayawhip;
 }
 
 ol {
@@ -86,18 +93,18 @@ nav li {
 }
 
 nav a {
-  border: 2px solid #333;
+  border: 2px solid teal;
   border-radius: 3px;
   margin: 0 12px 0 0;
   padding: 6px 12px;
   display: block;
-  color: #333;
+  color: teal;
   font-weight: 500;
   text-decoration: none;
   font-size: 16px;
 }
 
 nav a.active {
-  background: #333;
-  color: #fff;
+  background: teal;
+  color: papayawhip;
 }
